<resources>
    <string name="app_name">My Movie DB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_app">image app</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">Login</string>
    <string name="register_nav_text">Not register yet?</string>
    <string name="ic_profile_desc">icon profile</string>
    <string name="welcome_user_text">welcome, %1$s</string>
    <string name="title_placeholder">Movie Title</string>
    <string name="duration_placeholder">0 hours 0 minutes</string>
    <string name="genre_placeholder">movie genre</string>
    <string name="poster_image">poster image</string>
    <string name="release_date_placeholder">2000–01–01</string>
    <string name="popularity_placeholder">popularity</string>
    <string name="rating_placeholder">Rating</string>
    <string name="description_placeholder">description</string>
    <string name="production_placeholder">production</string>
    <string name="tagline_placeholder">tagline</string>
    <string name="register_text">Register</string>
    <string name="email_hint">email</string>
    <string name="confirm_password_hint">confirm password</string>
    <string name="profile_title">Profile</string>
    <string name="real_name_hint">real name</string>
    <string name="birthday_hint">birthday</string>
    <string name="update_text">Update</string>
    <string name="address_hint">Address</string>
    <string name="icon_favorite">icon favorite</string>
    <string-array name="profile_array">
        <item>Profile</item>
        <item>Log Out</item>
    </string-array>
</resources>