...
        app:layout_constraintTop_toBottomOf="@id/ly_datepicker_birthday"
        android:layout_marginStart="@dimen/margin_input_login"
        android:layout_marginEnd="@dimen/margin_input_login"
        android:text="@string/login_button_text" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_input_login"
...
